[gd_scene load_steps=30 format=3 uid="uid://boixto1v5xtcq"]

[ext_resource type="Texture2D" uid="uid://c57l262udunto" path="res://sprites/Road.png" id="1_fp1p5"]
[ext_resource type="Script" path="res://scripts/carride/main.gd" id="1_y5nnv"]
[ext_resource type="Script" path="res://scripts/carride/gui.gd" id="2_8a32l"]
[ext_resource type="Script" path="res://scripts/carride/road_scroll.gd" id="3_1a2x8"]
[ext_resource type="Texture2D" uid="uid://dwcu034i1bbii" path="res://images/touchscreen_vbuttons/UpTouch.png" id="4_5gjce"]
[ext_resource type="Script" path="res://scripts/carride/player.gd" id="4_sxi6f"]
[ext_resource type="PackedScene" uid="uid://lugeuc8kewl3" path="res://scenes/ui/pause_menu.tscn" id="5_2qleg"]
[ext_resource type="Texture2D" uid="uid://b04pu01i85qfb" path="res://images/touchscreen_vbuttons/UpTouchPressed.png" id="5_neflp"]
[ext_resource type="AudioStream" uid="uid://dw6573okuao6h" path="res://audio/sfx/Car Crash Short.wav" id="6_dtkok"]
[ext_resource type="Texture2D" uid="uid://dfyn51j8mmknf" path="res://images/touchscreen_vbuttons/DownTouch.png" id="6_o2i3l"]
[ext_resource type="Material" uid="uid://cqn5rkmj7io2i" path="res://shaders/panel_shader_material.tres" id="7_5jy3v"]
[ext_resource type="Texture2D" uid="uid://y4ytw7cfk6aw" path="res://images/touchscreen_vbuttons/DownTouchPressed.png" id="7_6r6ct"]
[ext_resource type="Texture2D" uid="uid://dvhou5wmxufck" path="res://sprites/Speedometer.png" id="8_0puha"]
[ext_resource type="Texture2D" uid="uid://bduar3walg2o0" path="res://sprites/CarRideBG_ForestParallax1.webp" id="8_32vv5"]
[ext_resource type="Texture2D" uid="uid://blvdg3xb6wyi6" path="res://sprites/CarRideBG_ForestParallax2.webp" id="9_bdxcf"]
[ext_resource type="Texture2D" uid="uid://ddivj5kfowxni" path="res://sprites/CarRideBG.webp" id="9_blmle"]
[ext_resource type="Texture2D" uid="uid://gixvapofe1qx" path="res://sprites/SpeedometerArrow.png" id="9_ioopi"]
[ext_resource type="AudioStream" uid="uid://d2lim2blo57e" path="res://audio/sfx/Inventory Shiny Things A.wav" id="9_kk7c3"]
[ext_resource type="Texture2D" uid="uid://b6suagxemrthg" path="res://sprites/CarRideBG_ForestParallax3.webp" id="10_q0lxm"]
[ext_resource type="SpriteFrames" uid="uid://ceithbaik2wml" path="res://sprites/spriteframes/Pigtank.tres" id="14_2x2r3"]

[sub_resource type="LabelSettings" id="LabelSettings_s0jls"]
font_size = 36
shadow_size = 0

[sub_resource type="Gradient" id="Gradient_dndjk"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hvxgf"]
gradient = SubResource("Gradient_dndjk")
width = 640
height = 128

[sub_resource type="Gradient" id="Gradient_cp8fb"]
colors = PackedColorArray(0.34902, 0.34902, 0.34902, 1, 0.34902, 0.34902, 0.34902, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n110a"]
gradient = SubResource("Gradient_cp8fb")
width = 638
height = 128

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr1qs"]
size = Vector2(1500, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8unen"]
size = Vector2(54.2857, 300)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfarv"]
size = Vector2(114, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5kkt"]
size = Vector2(250, 40)

[node name="Node2D" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_y5nnv")
speed_increment = 8.0
speed = 300.0
metadata/_edit_vertical_guides_ = [-221.0, -650.0]

[node name="GUI" type="Control" parent="." node_paths=PackedStringArray("label_time", "label_milk")]
z_index = 11
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -650.0
offset_top = -260.0
offset_right = 630.0
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_8a32l")
label_time = NodePath("HBoxContainer/LabelTime")
label_milk = NodePath("HBoxContainer2/LabelMilk")

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 172.0
offset_top = -47.0
offset_right = 449.0
grow_vertical = 0

[node name="Label" type="Label" parent="GUI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "CZAS: "
label_settings = SubResource("LabelSettings_s0jls")
uppercase = true

[node name="LabelTime" type="Label" parent="GUI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "00:00.000"
label_settings = SubResource("LabelSettings_s0jls")
horizontal_alignment = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -47.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="GUI/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "MLEKA: "
label_settings = SubResource("LabelSettings_s0jls")
uppercase = true

[node name="LabelMilk" type="Label" parent="GUI/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0
"
label_settings = SubResource("LabelSettings_s0jls")

[node name="HBoxContainer3" type="HBoxContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -42.0
offset_right = 86.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="LabelSpeed" type="Label" parent="GUI/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0
"
label_settings = SubResource("LabelSettings_s0jls")

[node name="VButtonsContainer" type="VBoxContainer" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -290.0
offset_right = -32.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 32

[node name="Up" type="TextureButton" parent="GUI/VButtonsContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("4_5gjce")
texture_pressed = ExtResource("5_neflp")
ignore_texture_size = true
stretch_mode = 5

[node name="Down" type="TextureButton" parent="GUI/VButtonsContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("6_o2i3l")
texture_pressed = ExtResource("7_6r6ct")
ignore_texture_size = true
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="GUI"]
visible = false
material = ExtResource("7_5jy3v")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Spowodowałeś wypadek!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Wynik:"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "000000"
horizontal_alignment = 1

[node name="PlayAgainBtn" type="Button" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_neighbor_bottom = NodePath("../MenuBtn")
text = "Zagraj jeszcze raz"

[node name="MenuBtn" type="Button" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_neighbor_top = NodePath("../PlayAgainBtn")
text = "Wróć do menu"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-10, 97)

[node name="Parallax1" type="Sprite2D" parent="Camera2D" node_paths=PackedStringArray("root_node")]
z_index = -6
position = Vector2(0, -402.125)
scale = Vector2(3, 3)
texture = ExtResource("8_32vv5")
script = ExtResource("3_1a2x8")
jump_point = -1536
parallax_multiplier = 0.97
root_node = NodePath("../..")

[node name="Parallax1" type="Sprite2D" parent="Camera2D/Parallax1"]
position = Vector2(512, 0)
texture = ExtResource("8_32vv5")

[node name="Parallax2" type="Sprite2D" parent="Camera2D" node_paths=PackedStringArray("root_node")]
z_index = -7
position = Vector2(0, -394.32)
scale = Vector2(3, 3)
texture = ExtResource("9_bdxcf")
script = ExtResource("3_1a2x8")
jump_point = -1536
parallax_multiplier = 0.98
root_node = NodePath("../..")

[node name="Parallax2" type="Sprite2D" parent="Camera2D/Parallax2"]
position = Vector2(512, 0)
texture = ExtResource("9_bdxcf")

[node name="Parallax3" type="Sprite2D" parent="Camera2D" node_paths=PackedStringArray("root_node")]
z_index = -8
position = Vector2(0, -350.85)
scale = Vector2(3, 3)
texture = ExtResource("10_q0lxm")
script = ExtResource("3_1a2x8")
jump_point = -1536
parallax_multiplier = 0.99
root_node = NodePath("../..")

[node name="Parallax3" type="Sprite2D" parent="Camera2D/Parallax3"]
position = Vector2(512, 0)
texture = ExtResource("10_q0lxm")

[node name="Background" type="Sprite2D" parent="Camera2D"]
z_index = -10
position = Vector2(0, -135)
texture = ExtResource("9_blmle")

[node name="HUDBorder" type="Sprite2D" parent="Camera2D"]
z_index = 10
position = Vector2(0, 333)
scale = Vector2(2, 2)
texture = SubResource("GradientTexture2D_hvxgf")

[node name="HUD" type="Sprite2D" parent="Camera2D"]
z_index = 10
position = Vector2(0, 337)
scale = Vector2(2, 2)
texture = SubResource("GradientTexture2D_n110a")

[node name="Speedometer" type="Sprite2D" parent="Camera2D"]
z_index = 10
position = Vector2(0, 360)
scale = Vector2(1.4, 1.4)
texture = ExtResource("8_0puha")
offset = Vector2(0, -64)

[node name="SpeedometerGauge" type="Sprite2D" parent="Camera2D/Speedometer"]
z_index = 10
position = Vector2(0, -1)
rotation = -0.628319
texture = ExtResource("9_ioopi")
offset = Vector2(0, -63)

[node name="OutOfBounds" type="Node2D" parent="."]
position = Vector2(70, 92)
scale = Vector2(2, 2)

[node name="OutOfBoundsLeft" type="Area2D" parent="OutOfBounds" groups=["Obstacles"]]
position = Vector2(-4, -123.2)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds/OutOfBoundsLeft"]
shape = SubResource("RectangleShape2D_lr1qs")

[node name="OutOfBoundsRight" type="Area2D" parent="OutOfBounds" groups=["Obstacles"]]
position = Vector2(-2.40002, 111)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds/OutOfBoundsRight"]
shape = SubResource("RectangleShape2D_lr1qs")

[node name="OutOfBounds" type="StaticBody2D" parent="OutOfBounds"]
position = Vector2(-750, 0)
scale = Vector2(0.7, 0.7)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds/OutOfBounds"]
position = Vector2(-17.1429, 0)
shape = SubResource("RectangleShape2D_8unen")

[node name="Road" type="Sprite2D" parent="." node_paths=PackedStringArray("root_node")]
z_index = -9
position = Vector2(0, 92)
scale = Vector2(2, 2)
texture = ExtResource("1_fp1p5")
script = ExtResource("3_1a2x8")
jump_point = null
parallax_multiplier = null
root_node = NodePath("..")

[node name="Road" type="Sprite2D" parent="Road"]
position = Vector2(720, 0)
texture = ExtResource("1_fp1p5")

[node name="LukaszczykWPandzie" type="Area2D" parent="."]
position = Vector2(-539, 67)
scale = Vector2(1.5, 1.5)
collision_mask = 7
script = ExtResource("4_sxi6f")
speed = 400

[node name="LukaszczykWPandzie" type="AnimatedSprite2D" parent="LukaszczykWPandzie"]
sprite_frames = ExtResource("14_2x2r3")
autoplay = "default"
frame_progress = 0.752942
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LukaszczykWPandzie"]
position = Vector2(1, 18.25)
shape = SubResource("RectangleShape2D_jfarv")

[node name="CrashPlayer" type="AudioStreamPlayer2D" parent="LukaszczykWPandzie"]
position = Vector2(-64.5, -225)
scale = Vector2(0.5, 0.5)
stream = ExtResource("6_dtkok")
bus = &"SFX"

[node name="MilkPlayer" type="AudioStreamPlayer2D" parent="LukaszczykWPandzie"]
position = Vector2(-64.5, -225)
scale = Vector2(0.5, 0.5)
stream = ExtResource("9_kk7c3")
bus = &"SFX"

[node name="SpawnPoints" type="Node2D" parent="."]
position = Vector2(1000, 7)

[node name="SP1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, -100)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP1"]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP1/Area2D"]
position = Vector2(-125, 30)
shape = SubResource("RectangleShape2D_r5kkt")

[node name="SP2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, -20)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP2"]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP2/Area2D"]
position = Vector2(-125, 30)
shape = SubResource("RectangleShape2D_r5kkt")

[node name="SP3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, 60)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP3"]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP3/Area2D"]
position = Vector2(-125, 30)
shape = SubResource("RectangleShape2D_r5kkt")

[node name="SP4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, 140)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP4"]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP4/Area2D"]
position = Vector2(-125, 30)
shape = SubResource("RectangleShape2D_r5kkt")

[node name="SP5" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, 220)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP5"]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP5/Area2D"]
position = Vector2(-125, 30)
shape = SubResource("RectangleShape2D_r5kkt")

[node name="PauseLayer" parent="." instance=ExtResource("5_2qleg")]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="touchscreen_move" from="GUI" to="LukaszczykWPandzie" method="move"]
[connection signal="button_down" from="GUI/VButtonsContainer/Up" to="GUI" method="_on_up_button_down"]
[connection signal="button_down" from="GUI/VButtonsContainer/Down" to="GUI" method="_on_down_button_down"]
[connection signal="pressed" from="GUI/PanelContainer/MarginContainer/VBoxContainer/PlayAgainBtn" to="GUI" method="_on_play_again_btn_pressed"]
[connection signal="pressed" from="GUI/PanelContainer/MarginContainer/VBoxContainer/MenuBtn" to="GUI" method="_on_menu_btn_pressed"]
[connection signal="area_entered" from="LukaszczykWPandzie" to="LukaszczykWPandzie" method="_on_area_entered"]
[connection signal="body_entered" from="LukaszczykWPandzie" to="LukaszczykWPandzie" method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_spawn_milk"]
