[gd_scene load_steps=25 format=3 uid="uid://b8sgtml2m0tio"]

[ext_resource type="Script" path="res://scripts/carride/main.gd" id="1_kgrjb"]
[ext_resource type="PackedScene" uid="uid://dfiiryowv56g0" path="res://scenes/carride_gui.tscn" id="2_vthj3"]
[ext_resource type="PackedScene" uid="uid://7vvoan13ljn" path="res://nodes/maps/ForestMap.tscn" id="10_e6vsi"]
[ext_resource type="Script" path="res://scripts/carride/player.gd" id="11_lef4e"]
[ext_resource type="SpriteFrames" uid="uid://boenmxlf17kxm" path="res://sprites/spriteframes/Panda.tres" id="12_plq4u"]
[ext_resource type="Texture2D" uid="uid://w5khp7bco2co" path="res://sprites/Explosion.png" id="13_bv85e"]
[ext_resource type="AudioStream" uid="uid://dw6573okuao6h" path="res://audio/sfx/Car Crash Short.wav" id="14_lxxd4"]
[ext_resource type="AudioStream" uid="uid://d2lim2blo57e" path="res://audio/sfx/milk.wav" id="15_opg6x"]
[ext_resource type="PackedScene" uid="uid://lugeuc8kewl3" path="res://scenes/ui/pause_menu.tscn" id="16_f7r4o"]
[ext_resource type="AudioStream" uid="uid://dffjdog0p3fde" path="res://audio/sfx/bass.ogg" id="17_msysa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr1qs"]
size = Vector2(1500, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8unen"]
size = Vector2(54.2857, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_3chcf"]
atlas = ExtResource("13_bv85e")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1kx4"]
atlas = ExtResource("13_bv85e")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l24l5"]
atlas = ExtResource("13_bv85e")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rca4u"]
atlas = ExtResource("13_bv85e")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggnt2"]
atlas = ExtResource("13_bv85e")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1kbo"]
atlas = ExtResource("13_bv85e")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xva0"]
atlas = ExtResource("13_bv85e")
region = Rect2(288, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_vas4r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3chcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1kx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l24l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rca4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggnt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1kbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xva0")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfarv"]
size = Vector2(114, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rof7r"]
size = Vector2(120, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6het2"]
size = Vector2(200, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1k2n"]
size = Vector2(200, 40)

[node name="Node2D" type="Node2D" node_paths=PackedStringArray("map", "player")]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_kgrjb")
map = NodePath("ForestMap")
player = NodePath("LukaszczykWPandzie")
version_2 = true
speed_increment = 8.0
speed = 300.0
metadata/_edit_vertical_guides_ = [-221.0, -650.0]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GUI" parent="." instance=ExtResource("2_vthj3")]

[node name="ForestMap" parent="." instance=ExtResource("10_e6vsi")]
position = Vector2(0, 77)

[node name="OutOfBounds" type="Node2D" parent="." groups=["Obstacles", "OutOfBounds"]]
z_as_relative = false
position = Vector2(80, 71)
scale = Vector2(2, 2)

[node name="OutOfBoundsLeft" type="Area2D" parent="OutOfBounds"]
position = Vector2(-4, -118)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds/OutOfBoundsLeft"]
shape = SubResource("RectangleShape2D_lr1qs")

[node name="OutOfBoundsRight" type="Area2D" parent="OutOfBounds"]
position = Vector2(-2.4, 106)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds/OutOfBoundsRight"]
shape = SubResource("RectangleShape2D_lr1qs")

[node name="OutOfBounds" type="Area2D" parent="OutOfBounds"]
position = Vector2(-750, 0)
scale = Vector2(0.7, 0.7)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds/OutOfBounds"]
position = Vector2(-17.1429, 0)
shape = SubResource("RectangleShape2D_8unen")

[node name="LukaszczykWPandzie" type="Area2D" parent="." groups=["Player"]]
position = Vector2(-529, 43)
scale = Vector2(1.5, 1.5)
collision_mask = 7
script = ExtResource("11_lef4e")

[node name="LukaszczykWPandzie" type="AnimatedSprite2D" parent="LukaszczykWPandzie"]
sprite_frames = ExtResource("12_plq4u")
autoplay = "default"
flip_h = true

[node name="Explosion" type="AnimatedSprite2D" parent="LukaszczykWPandzie"]
process_mode = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_vas4r")
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LukaszczykWPandzie"]
position = Vector2(1, 18.25)
shape = SubResource("RectangleShape2D_jfarv")

[node name="CrashPlayer" type="AudioStreamPlayer2D" parent="LukaszczykWPandzie"]
process_mode = 1
position = Vector2(-64.5, -225)
scale = Vector2(0.5, 0.5)
stream = ExtResource("14_lxxd4")
bus = &"SFX"

[node name="PickupPlayer" type="AudioStreamPlayer2D" parent="LukaszczykWPandzie"]
process_mode = 1
position = Vector2(-64.5, -225)
scale = Vector2(0.5, 0.5)
stream = ExtResource("15_opg6x")
bus = &"SFX"

[node name="DeathTimer" type="Timer" parent="LukaszczykWPandzie"]
process_mode = 1
one_shot = true

[node name="SpawnPoints" type="Node2D" parent="."]
position = Vector2(1010, 0)

[node name="SP1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, -117)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP1"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP1/Area2D"]
position = Vector2(-61, 30)
shape = SubResource("RectangleShape2D_rof7r")

[node name="SP2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, -37)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP2"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP2/Area2D"]
position = Vector2(-101, 30)
shape = SubResource("RectangleShape2D_6het2")

[node name="SP3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, 43)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP3"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP3/Area2D"]
position = Vector2(-61, 30)
shape = SubResource("RectangleShape2D_rof7r")

[node name="SP4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, 123)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP4"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP4/Area2D"]
position = Vector2(-101, 30)
shape = SubResource("RectangleShape2D_h1k2n")

[node name="SP5" type="Marker2D" parent="SpawnPoints"]
position = Vector2(0, 203)
gizmo_extents = 15.0

[node name="Area2D" type="Area2D" parent="SpawnPoints/SP5"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SP5/Area2D"]
position = Vector2(-61, 30)
shape = SubResource("RectangleShape2D_rof7r")

[node name="PauseLayer" parent="." instance=ExtResource("16_f7r4o")]

[node name="Timer" type="Timer" parent="."]
process_callback = 0

[node name="PowerupTimer" type="Timer" parent="."]

[node name="BassPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_msysa")
volume_db = -80.0
autoplay = true
bus = &"Music"

[connection signal="touchscreen_move" from="GUI" to="LukaszczykWPandzie" method="move"]
[connection signal="area_entered" from="LukaszczykWPandzie" to="LukaszczykWPandzie" method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_spawn_milk"]
